RESULTS/AutoSpec/raw_results/out-4o-NLA_lipus/18_0002/18_merged.txt
/home/yangfp/AutoSpec/AutoSpec1/out/18_0002/18_merged.c:23:5: error: unterminated comment
   23 |     /*@;
      |     ^
